src/test/deca/etapeC/valid/mult.deca
// Description:
//   Test de la bonne utilisation des registres
//
// Resultats:
//    10
//

{
    int a = 2;
    a = a * 5;
    println(a);
}
