src/test/deca/etapeC/invalid/divide_zero1.deca
// Description:
//   Test de la division par zéro
//
// Resultats:
//  ima_output: DIVISION BY ZERO
//

{
    int a = 1;
    int b = 5;
    int c = 2;
    int d = 5;
    c = a/(b+c-d);
}